# JStatics

./: CMakeLists.txt  README.md
CLI/: CMakeLists.txt  InputJSON.json  TDistributedLoad.cpp  TDistributedLoad.h  TElementEndMoment.h  TMaterial.cpp  TMaterial.h  TNodalLoad.cpp  TNodalLoad.h  TStructure.cpp  TSupport.cpp  TSupport.h  main.cpp
GUI/: CMakeLists.txt  JSONIntegration.h  JStatics.pro  JStatics.pro.user.a682c4f  TDistributedLoad.cpp  TDistributedLoad.h  TElement.cpp  TElementEndMoment.cpp  TLoadGraphics.cpp  TLoadGraphics.h  TMainWindow.cpp  TMainWindow.h  TMainWindow.ui  TMaterial.cpp  TMaterial.h  TNodalLoad.cpp  TNodalLoad.h  TNode.cpp  TNode.h  TStructure.cpp  TStructure.h  TStructureGraphics.cpp  TStructureGraphics.h  TSupport.cpp  TSupport.h  TSupportGraphics.cpp  TSupportGraphics.h  main.cpp
lib/: CMakeLists.txt  JSONIntegration.cpp  JSONIntegration.h  TDistributedLoad.cpp  TDistributedLoad.h  TElement.cpp  TElement.h  TElementEndMoment.cpp  TElementEndMoment.h  TMaterial.cpp  TMaterial.h  TNodalLoad.cpp  TNodalLoad.h  TNode.cpp  TNode.h  TStructure.cpp  TStructure.h  TSupport.cpp  TSupport.h
